--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,13 @@ asreview = "^1.2"
 # TODO: change to official repo
 colrev = {git = "https://tmahmood@github.com/tmahmood/colrev.git", rev = "asreview_refactor"}
 
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
+coverage = "^6.5.0"
+types-click = "^7.1.8"
+pytest-mock = "^3.10.0"
+requests-mock = "^1.10.0"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry>=1.2.0b1", "poetry-core"]
 build-backend = "poetry.core.masonry.api"
