--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,8 @@ include = [".colrev_endpoints.json"]
 [tool.poetry.dependencies]
 python = ">=3.8, <4"
 asreview = "^1.2"
-# TODO: change to official repo
-colrev = {git = "https://tmahmood@github.com/tmahmood/colrev.git", rev = "asreview_refactor"}
-pytest = "^7.4.0"
+colrev = ">=0.9.0"
+# pytest = "^7.4.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.1"
